[gd_scene load_steps=49 format=2]

[ext_resource path="res://Free/Background/Blue.png" type="Texture" id=1]
[ext_resource path="res://Free/Terrain/Terrain (16x16).png" type="Texture" id=2]
[ext_resource path="res://fase1.gd" type="Script" id=3]
[ext_resource path="res://Free/Main Characters/Pink Man/Run (32x32).png" type="Texture" id=4]
[ext_resource path="res://coraçãojogo.png" type="Texture" id=5]
[ext_resource path="res://Free/Main Characters/Pink Man/Idle (32x32).png" type="Texture" id=6]
[ext_resource path="res://Free/Main Characters/Virtual Guy/Idle (32x32).png" type="Texture" id=7]
[ext_resource path="res://player1.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.5, 12.5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 4 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "run",
"speed": 6.0
} ]

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=50]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=70]
extents = Vector2( 14.5, 20.75 )

[sub_resource type="TileSet" id=71]
0/name = "Terrain (16x16).png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 128, 48, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 5, Vector2( 2, 0 ), 64, Vector2( 2, 1 ), 65, Vector2( 2, 2 ), 1 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=72]
radius = 5.0

[node name="fase1" type="Node2D"]
script = ExtResource( 3 )

[node name="papelparede1" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="papelparede1"]
position = Vector2( 250, 256.5 )
scale = Vector2( 7.78125, 8.01563 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="papelparede2" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="papelparede2"]
position = Vector2( 759, 255.5 )
scale = Vector2( 8.1875, 8.01563 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="player1" type="KinematicBody2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player1"]
position = Vector2( 526, 486 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="player1"]
position = Vector2( 527, 468 )
scale = Vector2( 2.09375, 2.21875 )
frames = SubResource( 26 )
animation = "run"

[node name="player2" type="Area2D" parent="."]
position = Vector2( -1, -6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="player2"]
position = Vector2( 72.9999, 148 )
scale = Vector2( 1.78125, 2.09375 )
frames = SubResource( 50 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2"]
position = Vector2( 74, 160 )
shape = SubResource( 70 )

[node name="terrain" type="TileMap" parent="."]
position = Vector2( 1, 0 )
tile_set = SubResource( 71 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 524333, 0, 0, 524334, 0, 1, 524335, 0, 1, 524336, 0, 1, 524337, 0, 1, 524338, 0, 1, 524339, 0, 1, 524340, 0, 1, 524341, 0, 2, 589849, 0, 0, 589850, 0, 1, 589851, 0, 1, 589852, 0, 1, 589853, 0, 1, 589854, 0, 1, 589855, 0, 1, 589856, 0, 1, 589857, 0, 1, 589858, 0, 2, 589869, 0, 131072, 589870, 0, 131073, 589871, 0, 131073, 589872, 0, 131073, 589873, 0, 131073, 589874, 0, 131073, 589875, 0, 131073, 589876, 0, 131073, 589877, 0, 131074, 655385, 0, 131072, 655386, 0, 131073, 655387, 0, 131073, 655388, 0, 131073, 655389, 0, 131073, 655390, 0, 131073, 655391, 0, 131073, 655392, 0, 131073, 655393, 0, 131073, 655394, 0, 131074, 720897, 0, 0, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 720901, 0, 1, 720902, 0, 2, 720910, 0, 0, 720911, 0, 1, 720912, 0, 1, 720913, 0, 1, 720914, 0, 2, 720953, 0, 0, 720954, 0, 1, 720955, 0, 1, 720956, 0, 1, 720957, 0, 2, 786433, 0, 65536, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65538, 786446, 0, 131072, 786447, 0, 131073, 786448, 0, 131073, 786449, 0, 131073, 786450, 0, 131074, 786489, 0, 131072, 786490, 0, 131073, 786491, 0, 131073, 786492, 0, 131073, 786493, 0, 131074, 851969, 0, 131072, 851970, 0, 131073, 851971, 0, 131073, 851972, 0, 131073, 851973, 0, 131073, 851974, 0, 131074, 983090, 0, 0, 983091, 0, 1, 983092, 0, 1, 983093, 0, 1, 983094, 0, 2, 1048626, 0, 131072, 1048627, 0, 131073, 1048628, 0, 131073, 1048629, 0, 131073, 1048630, 0, 131074, 1310777, 0, 0, 1310778, 0, 1, 1310779, 0, 1, 1310780, 0, 1, 1310781, 0, 2, 1376313, 0, 131072, 1376314, 0, 131073, 1376315, 0, 131073, 1376316, 0, 131073, 1376317, 0, 131074, 1638450, 0, 0, 1638451, 0, 1, 1638452, 0, 1, 1638453, 0, 1, 1638454, 0, 2, 1703986, 0, 131072, 1703987, 0, 131073, 1703988, 0, 131073, 1703989, 0, 131073, 1703990, 0, 131074, 1835066, 0, 0, 1835067, 0, 1, 1835068, 0, 1, 1835069, 0, 1, 1835070, 0, 2, 1900602, 0, 131072, 1900603, 0, 131073, 1900604, 0, 131073, 1900605, 0, 131073, 1900606, 0, 131074, 2031616, 0, 0, 2031617, 0, 1, 2031618, 0, 1, 2031619, 0, 1, 2031620, 0, 1, 2031621, 0, 1, 2031622, 0, 1, 2031623, 0, 1, 2031624, 0, 1, 2031625, 0, 1, 2031626, 0, 1, 2031627, 0, 1, 2031628, 0, 1, 2031629, 0, 1, 2031630, 0, 1, 2031631, 0, 1, 2031632, 0, 1, 2031633, 0, 1, 2031634, 0, 1, 2031635, 0, 1, 2031636, 0, 1, 2031637, 0, 1, 2031638, 0, 1, 2031639, 0, 1, 2031640, 0, 1, 2031641, 0, 1, 2031642, 0, 1, 2031643, 0, 1, 2031644, 0, 1, 2031645, 0, 1, 2031646, 0, 1, 2031647, 0, 1, 2031648, 0, 1, 2031649, 0, 1, 2031650, 0, 1, 2031651, 0, 1, 2031652, 0, 1, 2031653, 0, 1, 2031654, 0, 1, 2031655, 0, 1, 2031656, 0, 1, 2031657, 0, 1, 2031658, 0, 1, 2031659, 0, 1, 2031660, 0, 1, 2031661, 0, 1, 2031662, 0, 1, 2031663, 0, 1, 2031664, 0, 1, 2031665, 0, 1, 2031666, 0, 1, 2031667, 0, 1, 2031668, 0, 1, 2031669, 0, 1, 2031670, 0, 1, 2031671, 0, 1, 2031672, 0, 1, 2031673, 0, 1, 2031674, 0, 1, 2031675, 0, 1, 2031676, 0, 1, 2031677, 0, 1, 2031678, 0, 1, 2031679, 0, 2, 2097152, 0, 65536, 2097153, 0, 65537, 2097154, 0, 65537, 2097155, 0, 65537, 2097156, 0, 65537, 2097157, 0, 65537, 2097158, 0, 65537, 2097159, 0, 65537, 2097160, 0, 65537, 2097161, 0, 65537, 2097162, 0, 65537, 2097163, 0, 65537, 2097164, 0, 65537, 2097165, 0, 65537, 2097166, 0, 65537, 2097167, 0, 65537, 2097168, 0, 65537, 2097169, 0, 65537, 2097170, 0, 65537, 2097171, 0, 65537, 2097172, 0, 65537, 2097173, 0, 65537, 2097174, 0, 65537, 2097175, 0, 65537, 2097176, 0, 65537, 2097177, 0, 65537, 2097178, 0, 65537, 2097179, 0, 65537, 2097180, 0, 65537, 2097181, 0, 65537, 2097182, 0, 65537, 2097183, 0, 65537, 2097184, 0, 65537, 2097185, 0, 65537, 2097186, 0, 65537, 2097187, 0, 65537, 2097188, 0, 65537, 2097189, 0, 65537, 2097190, 0, 65537, 2097191, 0, 65537, 2097192, 0, 65537, 2097193, 0, 65537, 2097194, 0, 65537, 2097195, 0, 65537, 2097196, 0, 65537, 2097197, 0, 65537, 2097198, 0, 65537, 2097199, 0, 65537, 2097200, 0, 65537, 2097201, 0, 65537, 2097202, 0, 65537, 2097203, 0, 65537, 2097204, 0, 65537, 2097205, 0, 65537, 2097206, 0, 65537, 2097207, 0, 65537, 2097208, 0, 65537, 2097209, 0, 65537, 2097210, 0, 65537, 2097211, 0, 65537, 2097212, 0, 65537, 2097213, 0, 65537, 2097214, 0, 65537, 2097215, 0, 65538, 2162688, 0, 65536, 2162689, 0, 65537, 2162690, 0, 65537, 2162691, 0, 65537, 2162692, 0, 65537, 2162693, 0, 65537, 2162694, 0, 65537, 2162695, 0, 65537, 2162696, 0, 65537, 2162697, 0, 65537, 2162698, 0, 65537, 2162699, 0, 65537, 2162700, 0, 65537, 2162701, 0, 65537, 2162702, 0, 65537, 2162703, 0, 65537, 2162704, 0, 65537, 2162705, 0, 65537, 2162706, 0, 65537, 2162707, 0, 65537, 2162708, 0, 65537, 2162709, 0, 65537, 2162710, 0, 65537, 2162711, 0, 65537, 2162712, 0, 65537, 2162713, 0, 65537, 2162714, 0, 65537, 2162715, 0, 65537, 2162716, 0, 65537, 2162717, 0, 65537, 2162718, 0, 65537, 2162719, 0, 65537, 2162720, 0, 65537, 2162721, 0, 65537, 2162722, 0, 65537, 2162723, 0, 65537, 2162724, 0, 65537, 2162725, 0, 65537, 2162726, 0, 65537, 2162727, 0, 65537, 2162728, 0, 65537, 2162729, 0, 65537, 2162730, 0, 65537, 2162731, 0, 65537, 2162732, 0, 65537, 2162733, 0, 65537, 2162734, 0, 65537, 2162735, 0, 65537, 2162736, 0, 65537, 2162737, 0, 65537, 2162738, 0, 65537, 2162739, 0, 65537, 2162740, 0, 65537, 2162741, 0, 65537, 2162742, 0, 65537, 2162743, 0, 65537, 2162744, 0, 65537, 2162745, 0, 65537, 2162746, 0, 65537, 2162747, 0, 65537, 2162748, 0, 65537, 2162749, 0, 65537, 2162750, 0, 65537, 2162751, 0, 65538, 2228224, 0, 65536, 2228225, 0, 65537, 2228226, 0, 65537, 2228227, 0, 65537, 2228228, 0, 65537, 2228229, 0, 65537, 2228230, 0, 65537, 2228231, 0, 65537, 2228232, 0, 65537, 2228233, 0, 65537, 2228234, 0, 65537, 2228235, 0, 65537, 2228236, 0, 65537, 2228237, 0, 65537, 2228238, 0, 65537, 2228239, 0, 65537, 2228240, 0, 65537, 2228241, 0, 65537, 2228242, 0, 65537, 2228243, 0, 65537, 2228244, 0, 65537, 2228245, 0, 65537, 2228246, 0, 65537, 2228247, 0, 65537, 2228248, 0, 65537, 2228249, 0, 65537, 2228250, 0, 65537, 2228251, 0, 65537, 2228252, 0, 65537, 2228253, 0, 65537, 2228254, 0, 65537, 2228255, 0, 65537, 2228256, 0, 65537, 2228257, 0, 65537, 2228258, 0, 65537, 2228259, 0, 65537, 2228260, 0, 65537, 2228261, 0, 65537, 2228262, 0, 65537, 2228263, 0, 65537, 2228264, 0, 65537, 2228265, 0, 65537, 2228266, 0, 65537, 2228267, 0, 65537, 2228268, 0, 65537, 2228269, 0, 65537, 2228270, 0, 65537, 2228271, 0, 65537, 2228272, 0, 65537, 2228273, 0, 65537, 2228274, 0, 65537, 2228275, 0, 65537, 2228276, 0, 65537, 2228277, 0, 65537, 2228278, 0, 65537, 2228279, 0, 65537, 2228280, 0, 65537, 2228281, 0, 65537, 2228282, 0, 65537, 2228283, 0, 65537, 2228284, 0, 65537, 2228285, 0, 65537, 2228286, 0, 65537, 2228287, 0, 65538, 2293760, 0, 65536, 2293761, 0, 65537, 2293762, 0, 65537, 2293763, 0, 65537, 2293764, 0, 65537, 2293765, 0, 65537, 2293766, 0, 65537, 2293767, 0, 65537, 2293768, 0, 65537, 2293769, 0, 65537, 2293770, 0, 65537, 2293771, 0, 65537, 2293772, 0, 65537, 2293773, 0, 65537, 2293774, 0, 65537, 2293775, 0, 65537, 2293776, 0, 65537, 2293777, 0, 65537, 2293778, 0, 65537, 2293779, 0, 65537, 2293780, 0, 65537, 2293781, 0, 65537, 2293782, 0, 65537, 2293783, 0, 65537, 2293784, 0, 65537, 2293785, 0, 65537, 2293786, 0, 65537, 2293787, 0, 65537, 2293788, 0, 65537, 2293789, 0, 65537, 2293790, 0, 65537, 2293791, 0, 65537, 2293792, 0, 65537, 2293793, 0, 65537, 2293794, 0, 65537, 2293795, 0, 65537, 2293796, 0, 65537, 2293797, 0, 65537, 2293798, 0, 65537, 2293799, 0, 65537, 2293800, 0, 65537, 2293801, 0, 65537, 2293802, 0, 65537, 2293803, 0, 65537, 2293804, 0, 65537, 2293805, 0, 65537, 2293806, 0, 65537, 2293807, 0, 65537, 2293808, 0, 65537, 2293809, 0, 65537, 2293810, 0, 65537, 2293811, 0, 65537, 2293812, 0, 65537, 2293813, 0, 65537, 2293814, 0, 65537, 2293815, 0, 65537, 2293816, 0, 65537, 2293817, 0, 65537, 2293818, 0, 65537, 2293819, 0, 65537, 2293820, 0, 65537, 2293821, 0, 65537, 2293822, 0, 65537, 2293823, 0, 65538, 2359296, 0, 65536, 2359297, 0, 65537, 2359298, 0, 65537, 2359299, 0, 65537, 2359300, 0, 65537, 2359301, 0, 65537, 2359302, 0, 65537, 2359303, 0, 65537, 2359304, 0, 65537, 2359305, 0, 65537, 2359306, 0, 65537, 2359307, 0, 65537, 2359308, 0, 65537, 2359309, 0, 65537, 2359310, 0, 65537, 2359311, 0, 65537, 2359312, 0, 65537, 2359313, 0, 65537, 2359314, 0, 65537, 2359315, 0, 65537, 2359316, 0, 65537, 2359317, 0, 65537, 2359318, 0, 65537, 2359319, 0, 65537, 2359320, 0, 65537, 2359321, 0, 65537, 2359322, 0, 65537, 2359323, 0, 65537, 2359324, 0, 65537, 2359325, 0, 65537, 2359326, 0, 65537, 2359327, 0, 65537, 2359328, 0, 65537, 2359329, 0, 65537, 2359330, 0, 65537, 2359331, 0, 65537, 2359332, 0, 65537, 2359333, 0, 65537, 2359334, 0, 65537, 2359335, 0, 65537, 2359336, 0, 65537, 2359337, 0, 65537, 2359338, 0, 65537, 2359339, 0, 65537, 2359340, 0, 65537, 2359341, 0, 65537, 2359342, 0, 65537, 2359343, 0, 65537, 2359344, 0, 65537, 2359345, 0, 65537, 2359346, 0, 65537, 2359347, 0, 65537, 2359348, 0, 65537, 2359349, 0, 65537, 2359350, 0, 65537, 2359351, 0, 65537, 2359352, 0, 65537, 2359353, 0, 65537, 2359354, 0, 65537, 2359355, 0, 65537, 2359356, 0, 65537, 2359357, 0, 65537, 2359358, 0, 65537, 2359359, 0, 65538, 2424832, 0, 131072, 2424833, 0, 131073, 2424834, 0, 131073, 2424835, 0, 131073, 2424836, 0, 131073, 2424837, 0, 131073, 2424838, 0, 131073, 2424839, 0, 131073, 2424840, 0, 131073, 2424841, 0, 131073, 2424842, 0, 131073, 2424843, 0, 131073, 2424844, 0, 131073, 2424845, 0, 131073, 2424846, 0, 131073, 2424847, 0, 131073, 2424848, 0, 131073, 2424849, 0, 131073, 2424850, 0, 131073, 2424851, 0, 131073, 2424852, 0, 131073, 2424853, 0, 131073, 2424854, 0, 131073, 2424855, 0, 131073, 2424856, 0, 131073, 2424857, 0, 131073, 2424858, 0, 131073, 2424859, 0, 131073, 2424860, 0, 131073, 2424861, 0, 131073, 2424862, 0, 131073, 2424863, 0, 131073, 2424864, 0, 131073, 2424865, 0, 131073, 2424866, 0, 131073, 2424867, 0, 131073, 2424868, 0, 131073, 2424869, 0, 131073, 2424870, 0, 131073, 2424871, 0, 131073, 2424872, 0, 131073, 2424873, 0, 131073, 2424874, 0, 131073, 2424875, 0, 131073, 2424876, 0, 131073, 2424877, 0, 131073, 2424878, 0, 131073, 2424879, 0, 131073, 2424880, 0, 131073, 2424881, 0, 131073, 2424882, 0, 131073, 2424883, 0, 131073, 2424884, 0, 131073, 2424885, 0, 131073, 2424886, 0, 131073, 2424887, 0, 131073, 2424888, 0, 131073, 2424889, 0, 131073, 2424890, 0, 131073, 2424891, 0, 131073, 2424892, 0, 131073, 2424893, 0, 131073, 2424894, 0, 131073, 2424895, 0, 131074 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( 224, 176, 226, 207, 302, 206, 301, 176 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( 912, 176, 910, 191, 911, 204, 992, 205, 992, 178 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 0, 2 )
polygon = PoolVector2Array( 1, 496, 0, 527, 1022, 526, 1023, 495 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( 800, 400, 800, 431, 879, 428, 878, 401 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( 19, 176, 17, 221, 112, 222, 110, 177 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( 913, 319, 913, 352, 990, 352, 991, 320, 935.527, 319.289 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( 800, 241, 799, 269, 879, 271, 880, 241 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( 720, 129, 719, 134, 723, 155, 862, 159, 865, 128 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( 400, 147, 402, 175, 559, 174, 559, 145 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 1, 1 )
polygon = PoolVector2Array( 930, 449, 929, 476, 1008, 480, 1008, 447 )

[node name="coracao" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="coracao"]
position = Vector2( 490.312, 117.625 )
scale = Vector2( 0.223616, 0.232225 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coracao"]
position = Vector2( 490, 122 )
shape = SubResource( 72 )

[connection signal="body_entered" from="player2" to="." method="_on_player2_body_entered"]
[connection signal="body_entered" from="coracao" to="." method="_on_coracao_body_entered"]
